cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/template/qwen2.5-coder:7b/row_24_update_11_template_20260306_063115.yaml
AWSTemplateFormatVersion: '2010-09-09'

Parameters:
  VpcCidrBlock:
    Type: String
    Description: CIDR block for the VPC
    Default: 10.0.0.0/16
  Subnet1CidrBlock:
    Type: String
    Description: CIDR block for the first subnet
    Default: 10.0.1.0/24
  Subnet2CidrBlock:
    Type: String
    Description: CIDR block for the second subnet
    Default: 10.0.2.0/24
  AutoScalingGroupSize:
    Type: Number
    Description: Number of instances in the Auto Scaling Group
    Default: 2
  InstanceType:
    Type: String
    Description: EC2 instance type
    Default: t2.micro
  ElastiCacheNodeType:
    Type: String
    Description: ElastiCache node type
    Default: cache.m3.medium
  RegionAZs:
    Type: List<String>
    Description: List of Availability Zones
    Default:
      - us-east-1a
      - us-east-1b
      - us-east-1c

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidrBlock
      EnableDnsSupport: true
      EnableDnsHostnames: true

  Subnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref Subnet1CidrBlock
      AvailabilityZone: !Select [0, !Ref RegionAZs]

  Subnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref Subnet2CidrBlock
      AvailabilityZone: !Select [1, !Ref RegionAZs]

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      VpcId: !Ref VPC

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  Route:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  SubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet1
      RouteTableId: !Ref RouteTable

  SubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet2
      RouteTableId: !Ref RouteTable

  AutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      LaunchTemplate:
        LaunchTemplateId: !Ref LaunchTemplate
      MinSize: !Ref AutoScalingGroupSize
      MaxSize: !Ref AutoScalingGroupSize
      VPCZoneIdentifier:
        - !Ref Subnet1
        - !Ref Subnet2

  LaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        ImageId: ami-0c55b159cbfafe1f0
        InstanceType: !Ref InstanceType
        KeyName: my-key-pair
        SecurityGroupIds:
          - !Ref SecurityGroup
        UserData: !Base64 |
          #!/bin/bash
          yum update -y
          yum install -y awscli
          aws s3 cp s3://my-bucket/my-script.sh /home/ec2-user/my-script.sh
          chmod +x /home/ec2-user/my-script.sh
          /home/ec2-user/my-script.sh

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH and HTTP access
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  ElastiCacheCluster:
    Type: AWS::ElastiCache::ReplicationGroup
    Properties:
      ReplicationGroupDescription: My Replication Group
      PrimaryAvailabilityZone: !Select [0, !Ref RegionAZs]
      NumCacheNodes: !Ref AutoScalingGroupSize
      CacheNodeType: !Ref ElastiCacheNodeType
      Engine: redis
      EngineVersion: 6.x
      CacheSubnetGroupName: !Ref CacheSubnetGroup

  CacheSubnetGroup:
    Type: AWS::ElastiCache::SubnetGroup
    Properties:
      CacheSubnetGroupName: MyCacheSubnetGroup
      Description: My Cache Subnet Group
      SubnetIds:
        - !Ref Subnet1
        - !Ref Subnet2

Outputs:
  VPCId:
    Description: The ID of the VPC
    Value: !Ref VPC
  Subnet1Id:
    Description: The ID of the first subnet
    Value: !Ref Subnet1
  Subnet2Id:
    Description: The ID of the second subnet
    Value: !Ref Subnet2
  InternetGatewayId:
    Description: The ID of the internet gateway
    Value: !Ref InternetGateway
  RouteTableId:
    Description: The ID of the route table
    Value: !Ref RouteTable
  SubnetRouteTableAssociation1Id:
    Description: The ID of the first subnet route table association
    Value: !Ref SubnetRouteTableAssociation1
  SubnetRouteTableAssociation2Id:
    Description: The ID of the second subnet route table association
    Value: !Ref SubnetRouteTableAssociation2
  AutoScalingGroupId:
    Description: The ID of the auto scaling group
    Value: !Ref AutoScalingGroup
  LaunchTemplateId:
    Description: The ID of the launch template
    Value: !Ref LaunchTemplate
  SecurityGroupId:
    Description: The ID of the security group
    Value: !Ref SecurityGroup
  ElastiCacheClusterId:
    Description: The ID of the ElastiCache cluster
    Value: !Ref ElastiCacheCluster
  CacheSubnetGroupId:
    Description: The ID of the cache subnet group
    Value: !Ref CacheSubnetGroup
